CANDLEPIN-600: Resolve PoolRules dependency cycle